--- a/fr/package.json
+++ b/fr/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
     "framer-motion": "^12.23.12",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-dropzone": "^14.3.8",
+    "react-leaflet": "^5.0.0",
+    "react-router-dom": "^7.9.1",
     "recharts": "^3.2.0",
     "tailwindcss": "^4.1.13"
   },
